--- a/assets/index.css
+++ b/assets/index.css
@@ -51,8 +51,10 @@ p {
 
 header {
   height: 80vh;
-  background-image: url('/Users/zhenghanhu/Frontend/Projects/zhengHan.github.io/assets/imgs/header.jpg');
+  background-image: url('/Users/zhenghanhu/Frontend/Projects/zhengHan.github.io/assets/imgs/1.jpg');
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -104,6 +106,9 @@ nav {
   justify-content: space-around;
   background-color: #F85C70;
   padding: 10px 0;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 nav a {
@@ -155,30 +160,10 @@ nav a:hover {
 }
 
 .card {
-  color:#6c757d;
-}
-
-/* .progress-bar {
-  width: 80%;
-  background-color: #ddd;
-  margin: 10px 0;
-  position: relative;
-}
-
-.progress-bar::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background-color: #F85C70;
-} */
-
-.card {
   width: 450px;
   padding: 20px;
   border: 1px solid #ccc;
+  color:#6c757d;
 }
 
 .progress-bar {
@@ -203,6 +188,16 @@ nav a:hover {
   display: table;
 }
 
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+.column {
+  flex: 1;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
 .box {
   width: 100%;
   padding: 20px;
@@ -218,5 +213,9 @@ nav a:hover {
 }
 
 .column.half {
-  flex: 0.48; /* Little less than half to allow for space in-between */
+  flex: 0.48;
+}
+
+#contact .social-icons a {
+  color:#212529;
 }
