--- a/assets/index.css
+++ b/assets/index.css
@@ -138,7 +138,6 @@ nav a:hover {
 }
 
 .column {
-  width: 33.33%;
   float: left;
   padding: 10px;
 }
@@ -190,7 +189,7 @@ nav a:hover {
 
 .flex-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 .column {
   flex: 1;
