remove the contact info and added footer

--- a/assets/index.css
+++ b/assets/index.css
@@ -88,21 +88,24 @@ header {
   font-family: 'Dosis', sans-serif;
   margin-bottom: 25px;
   color:inherit;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .social-icons {
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 .social-icons a {
   margin: 0 10px;
-  text-decoration: none;
   color: #fff;
+  font-size: 1.5em;
 }
 
 #contact .social-icons a {
+  margin: 1em 1em 1em 0;
+  padding: 2em 2em 2em 0;
   color:#212529;
+  font-size: 2em;
 }
 
 nav {
@@ -189,8 +192,6 @@ td {
 tr {
   display:table-row;
 }
-
-
 
 td a {
   display: inline-block;
@@ -301,5 +302,22 @@ form button {
 }
 
 #contact .social-icons a {
+  margin: 2em 1em 1em 0;
+  padding: 2em 2em 2em 0;
   color:#212529;
+  font-size: 2em;
 }
+
+.codecademy-container {
+  margin: 30px 0;
+}
+
+#codecademy {
+  height: 30px;
+  width: 120px;
+}
+
+.copyright {
+  margin: 2em;
+}
+
