--- a/assets/index.css
+++ b/assets/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+  }
+  
 body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
@@ -51,7 +55,7 @@ p {
 
 header {
   height: 80vh;
-  background-image: url('/Users/zhenghanhu/Frontend/Projects/zhengHan.github.io/assets/imgs/1.jpg');
+  /* background-image: url('/Users/zhenghanhu/Frontend/Projects/zhengHan.github.io/assets/imgs/1.jpg'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -61,6 +65,7 @@ header {
   justify-content: center;
   align-items: start;
   padding-left: 8%;
+  transition: background-image 1s ease-in-out;
 }
 
 .header-content {
